--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://azharkhan.in/"
+baseurl = "https://xor97.netlify.com/"
 theme="hc-starter"
 languageCode = "en"
 title = "Azhar Khan"
