--- a/config.toml
+++ b/config.toml
@@ -12,9 +12,9 @@ pygmentsCodeFences = true
 
 [params]
   keywords = "Data Engineering, Data Science, AI, Analytics, Design, UX, UI, Product"
-  description = "Blog posts on code and design by github.com/XOR97"
-  strapline = "Azhar Khan is an independent data engineer and developer from Ottawa, Canada."
-  location = "Ottawa, CA"
+  description = "Azhar Khan is a professional developer and data engineer from Ottawa, ON. I write articles and notes on Data Engineeering with a little bit of Product Management sprinkled in between."
+  strapline = "Data Engineering, Viz & Product Management"
+  location = "Ottawa, ON"
 
   # Set Cloudinary URL for image hosting
   cloudinary_url = "https://res.cloudinary.com/azhar932/image/upload"
@@ -22,10 +22,10 @@ pygmentsCodeFences = true
 
 [author]
   name = "Azhar Khan"
-  email = "azhar932@icloud.com"
-  twitter = "https://twitter.com/Azhr_K_"
+  email = "akhan@azharkhan.in"
+  twitter = "https://twitter.com/AzharCan"
   github = "https://github.com/XOR97"
-  linkedin = "https://www.linkedin.com/in/azhar93/"
+  linkedin = "https://www.linkedin.com/in/Azhar93/"
 
 [taxonomies]
   tag = "tags"
