--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
-  command = "hugo"
-  publish = "public"
+publish = "public"  // default hugo build folder
+command = "hugo --gc --minify" // hugo build command
 
 [context.production.environment]
-  HUGO_VERSION = "0.55.6"
-  HUGO_ENV = "production"
+HUGO_VERSION = "0.62.1"
+HUGO_ENV = "production"
+HUGO_ENABLEGITINFO = "true"
