--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ pygmentsCodeFences = true
 
 [author]
   name = "Azhar Khan"
-  email = "azhar932@icloud.com"
+  email = "azhar@azharkhan.in"
   twitter = "https://twitter.com/AzharCan"
   github = "https://github.com/XOR97"
   linkedin = "https://www.linkedin.com/in/Azhar93/"
