--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ theme="hc-starter"
 languageCode = "en"
 title = "Azhar Khan"
 pluralizelisttitles = false
-googleAnalytics = "UA-127874396-1"
+
 
 # Enable for syntax highlighting
 pygmentsUseClasses=true
@@ -12,7 +12,7 @@ pygmentsCodeFences = true
 # pygmentsCodefencesGuessSyntax = true
 
 [params]
-  keywords = "Data Engineering, Product Management, Data Science, AI, Analytics, Design, UX, UI"
+  keywords = "Data Engineering, Product Management, Data Viz, AI, Analytics, Design, UX, UI"
   description = "Blog posts on code and design by Azhar"
   strapline = "I like building stuff"
   location = "Ontario, CA"
